# TrajOpt

./: .gitignore  CMakeLists.txt  README.md
examples/satellite/: SatelliteDynamics.cpp  SatelliteDynamics.hpp  SatelliteObjective.cpp  SatelliteObjective.hpp  main.cpp
references/: solvers.txt
scripts/: gradient_check.py  nlopt_example.py  pendulum_collocation.py  pendulum_shooting.py  pendulum_sim.py
src/: CMakeLists.txt
src/math/: CMakeLists.txt  Quaternion.cpp  Quaternion.hpp  common.hpp
src/milqr/: CMakeLists.txt  Dynamics.hpp  MilqrSolver.cpp  MilqrSolver.hpp  Objective.hpp  StatusCode.hpp  dataUtils.hpp
src/todo_nlp/: Collocation.hpp  ConstraintGroup.hpp  InterfaceSnopt.hpp  Problem.hpp  Solver.hpp  SolverSnopt.hpp  VariableGroup.hpp
test/: CMakeLists.txt  testMILQR.cpp
